[gd_scene load_steps=4 format=3 uid="uid://cewyj6rje0gdo"]

[ext_resource type="Script" path="res://tools/tabs/verdict/parameters.gd" id="1_pmcnh"]
[ext_resource type="PackedScene" uid="uid://bge3nde7sbbqn" path="res://tools/fields/fieldTitle.tscn" id="2_xbd6i"]
[ext_resource type="PackedScene" uid="uid://cq3ev7a3n7imb" path="res://tools/fields/txtField.tscn" id="3_q282j"]

[node name="parameters" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_pmcnh")

[node name="idTitle" parent="." instance=ExtResource("2_xbd6i")]
layout_mode = 2
title = "Identification"

[node name="idGrid" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="lblName" type="Label" parent="idGrid"]
layout_mode = 2
text = "Name "
horizontal_alignment = 2
vertical_alignment = 1

[node name="txtName" parent="idGrid" instance=ExtResource("3_q282j")]
layout_mode = 2
property = "name"

[node name="lblShortname" type="Label" parent="idGrid"]
layout_mode = 2
text = "Short name "
horizontal_alignment = 2
vertical_alignment = 1

[node name="txtShortname" parent="idGrid" instance=ExtResource("3_q282j")]
layout_mode = 2
property = "shortName"

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="factsTitle" parent="." instance=ExtResource("2_xbd6i")]
layout_mode = 2
title = "Facts"

[node name="btnAdd" type="Button" parent="factsTitle"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "+"

[node name="scroll" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="list" type="VBoxContainer" parent="scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="Control2" type="Control" parent="."]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[connection signal="pressed" from="factsTitle/btnAdd" to="." method="_on_btn_add_pressed"]
